[package]
name = "dakv_logger"
version = "0.1.1"
authors = ["da2018 <da2018t@gmail.com>"]
edition = "2018"
description = "Logger for dakv"
license = "MIT"
homepage = "https://github.com/dakv/logger"
keywords = ["logger", "log"]
categories = ["logger", "log"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-scope = "4.3.0"
slog-envlogger = "2.2.0"
chrono = "0.4"